@@ -1,7 +1,7 @@
 Package: robustbase
 Version: 0.93-1
 VersionNote: Released 0.93-0 on 2018-04-21 on CRAN
-Date: 2018-05-18
+Date: 2018-06-15
 Title: Basic Robust Statistics
 Authors@R: c(person("Martin","Maechler", role=c("aut","cre"), email="maechler@stat.math.ethz.ch")
          , person("Peter", "Rousseeuw", role="ctb", comment = "Qn and Sn")
